*Visibility Changes:
	ExportReviewDataWizardPage:
		methods:
			getExportPath		public -> protected
			getTemplatePath		public -> protected
	NewReviewWizard:
		attributes:
			page1				none -> private
	NewReviewWizardPage
		methods:
			getReviewID			public -> protected
			getReviewReference	public -> protected
			getReviewResponsibility	public -> protected
			getReviewDescription public -> protected
	AnnotationParser
		attributes:
			tagRegex			protected -> private
			tagPattern			protected -> private
			idPositionMap		protected -> private
			idTagPositions		protected -> private
			displayedComments	protected -> private
			document			protected -> private
			editor				protected -> private
			annotationModel		protected -> private

*Deletions:
	ExportReviewDataWizardPage:
		methods:
			getSelectedReviewIDs
			
*Code optimizations:
	-> extract uses of classes implementing singleton-pattern as class attributes for better
		visibility according to documentation. This was done in:
			Class						(Variables)
			XSLExport					(ReviewAccess)
			ExportReviewDataWizardPage	(ReviewAccess)
			AgileAnnotationController	(PropertiesManager)
			AnnotationParser			(PropertiesManager)
			TagCleaner					(PropertiesManager)
			RefreshHandler				(ReviewAccess)
			ShowCommentHandler			(ReviewAccess)
			CommentChooserDialog		(PropertiesManager)
			DeleteCommentHandler		(ReviewAccess, PropertiesManager)